--- a/app/src/main/res/values/circle_image_view.xml
+++ b/app/src/main/res/values/circle_image_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="roundedImageView">
+    <style name="circleImageView">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
