--- a/app/src/main/res/layout/item_other_blog.xml
+++ b/app/src/main/res/layout/item_other_blog.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="#F6F6F6"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="30dp">
+    app:cardCornerRadius="30dp"
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp">
+        android:padding="16dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivOtherBlog"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_weight="0"
-            app:shapeAppearance="@style/roundedOtherBlogImageView"
+            android:contentDescription="Other Blog Image"
             android:scaleType="centerCrop"
-            android:src="@tools:sample/avatars"
-            android:contentDescription="Other Blog Image" />
+            android:src="@drawable/blank_avatar"
+            app:shapeAppearance="@style/roundedOtherBlogImageView" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
