--- a/app/src/main/res/layout/layout_other_blogs.xml
+++ b/app/src/main/res/layout/layout_other_blogs.xml
@@ -18,11 +18,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvOtherBlogs"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
-        android:paddingStart="24dp"
-        android:paddingEnd="16dp"
+        android:clipToPadding="false"
+        android:paddingHorizontal="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_editor_absoluteX="0dp" />
