--- a/app/src/main/res/layout/layout_other_blogs.xml
+++ b/app/src/main/res/layout/layout_other_blogs.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView3"
@@ -20,12 +20,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvOtherBlogs"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:clipToPadding="false"
         android:paddingHorizontal="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:itemCount="2"
+        tools:listitem="@layout/item_other_blog" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
