--- a/app/src/main/res/layout/layout_popular_blogs.xml
+++ b/app/src/main/res/layout/layout_popular_blogs.xml
@@ -26,5 +26,5 @@
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:listitem="@layout/item_popular_blog" />
 </androidx.constraintlayout.widget.ConstraintLayout>
