add new blog flow, navigation, activity

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -102,12 +102,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvHomeBlogs"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/svChip" />
+        app:layout_constraintTop_toBottomOf="@+id/svChip"
+        tools:itemCount="2"
+        tools:listitem="@layout/layout_popular_blogs" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
