feat: change icon

--- a/app/src/main/res/drawable/ic_circle_arrow_left.xml
+++ b/app/src/main/res/drawable/ic_circle_arrow_left.xml
@@ -3,12 +3,12 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,22C6.485,22 2,17.514 2,12C2,6.486 6.485,2 12,2C17.514,2 22,6.486 22,12C22,17.514 17.514,22 12,22Z"
-      android:strokeAlpha="0.4"
-      android:fillColor="#130F26"
-      android:fillAlpha="0.4"/>
-  <path
-      android:pathData="M13.443,16.221C13.252,16.221 13.059,16.148 12.913,16.002L9.427,12.532C9.286,12.391 9.207,12.2 9.207,12C9.207,11.801 9.286,11.61 9.427,11.469L12.913,7.997C13.207,7.705 13.681,7.705 13.974,7.999C14.266,8.293 14.264,8.768 13.972,9.06L11.019,12L13.972,14.94C14.264,15.232 14.266,15.706 13.974,16C13.828,16.148 13.634,16.221 13.443,16.221Z"
-      android:fillColor="#130F26"/>
+    <path
+        android:fillAlpha="0.4"
+        android:fillColor="#130F26"
+        android:pathData="M12,22C6.485,22 2,17.514 2,12C2,6.486 6.485,2 12,2C17.514,2 22,6.486 22,12C22,17.514 17.514,22 12,22Z"
+        android:strokeAlpha="0.4" />
+    <path
+        android:fillColor="#130F26"
+        android:pathData="M13.443,16.221C13.252,16.221 13.059,16.148 12.913,16.002L9.427,12.532C9.286,12.391 9.207,12.2 9.207,12C9.207,11.801 9.286,11.61 9.427,11.469L12.913,7.997C13.207,7.705 13.681,7.705 13.974,7.999C14.266,8.293 14.264,8.768 13.972,9.06L11.019,12L13.972,14.94C14.264,15.232 14.266,15.706 13.974,16C13.828,16.148 13.634,16.221 13.443,16.221Z" />
 </vector>
