--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,13 +79,14 @@
     <HorizontalScrollView
         android:id="@+id/svChip"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilSearchBlog">
+        app:layout_constraintTop_toBottomOf="@+id/tilSearchBlog"
+        tools:layout_height="54dp">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cgCategory"
