--- a/app/src/main/res/layout/layout_general_blogs.xml
+++ b/app/src/main/res/layout/layout_general_blogs.xml
@@ -6,24 +6,25 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/other_blogs"
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
         android:textFontWeight="700"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/other_blogs" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcvOtherBlogs"
+        android:id="@+id/rcvBlogs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:clipToPadding="false"
         android:paddingHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:paddingBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
         tools:itemCount="5"
         tools:listitem="@layout/item_other_blog" />
 
